--- a/jQuery/index.html
+++ b/jQuery/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>My Name Is Jeet Sharma.</h1>
     <button>Click Me</button>
+    <button id="second">Push Me</button>
     <input type="text" >
     <!-- jQuery cdn link -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
